AboutUs and Index filr updated inside sponge folder, Redame updated and image inserted on the web page.

--- a/konjac_sponges/Views/Sponge/AboutUs.cshtml
+++ b/konjac_sponges/Views/Sponge/AboutUs.cshtml
@@ -3,3 +3,38 @@
 }
 
 <h2>About Us</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Catagolue</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    <header>
+        <h2 style="text-align:center">About konjac sponges</h2>
+        <img src="~/img/sponge.png" style="width:1080px;height:680px;" />
+    </header>
+    <main>
+        <p> Welcome to the home of the original multi-award winning Konjac Sponge Company. The ultimate Korean Beauty Tool with pure Konjac fibre and nourishing mineral extracts deeply cleanses and refines skin for a radiant complexion.</p>
+
+        <hr />
+
+        <h3>Our founders</h3>
+
+        <p>Michele Riley has a background in natural products, having started out in natural baby and child products. You will sometimes find details of Konjac Sponges that have come along since ours having "started out as baby sponges", and thats correct, as Michele launched the products for this purpose, but quickly discovered the benefits for all age categories and worked to have other ingredients with skincare benefits added. She has never looked back.</p>
+
+        <p>
+            DISCRIPTION OF KONJAC SPONGE:
+            <ul>
+                <li>We supplying premium grade Konjac Sponge products worldwide.</li>
+                <li>Our Konjac sponges are made by hand in the volcanic hills of Jeju Island in South Korea.</li>
+                <li>Our sponges are the most effective Korean skincare tools, deeply cleansing and exfoliating even the most sensitive skin for a natural glow.</li>
+            </ul>
+        </p>
+    </main>
+</body>
+</html>
