--- a/konjac_sponges/Views/Sponge/Index.cshtml
+++ b/konjac_sponges/Views/Sponge/Index.cshtml
@@ -3,3 +3,17 @@
 }
 
 <h2>Index</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Catagolue</title>
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    <h2 style="text-align:center">Konjac sponge</h2>
+</body>
+</html>
