Privacy policy page updated and Readme updated as well.

--- a/konjac_sponges/Views/Home/Privacy.cshtml
+++ b/konjac_sponges/Views/Home/Privacy.cshtml
@@ -3,4 +3,11 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h2>PRIVACY POLICY</h2>
+
+<hr />
+<p>The Konjac Sponge Company Ltd understands that your privacy is important to you and that you care about how your personal data is used. We respect and value the privacy of everyone who visits this website, www.konjacspongecompany.com (“Our Site”) and will only collect and use personal data in ways that are described here, and in a way that is consistent with our obligations and your rights under the law.</p>
+
+<p>Please read this Privacy Policy carefully and ensure that you understand it. Your acceptance of this Privacy Policy [is deemed to occur upon your first use of Our Site. If you do not accept and agree with this Privacy Policy, you must stop using Our Site immediately.</p>
+
+<p>We will only use the information that we collect about you lawfully and in accordance with the Data Protection Act. All information we collect about you is held with the utmost care and security. Your visit to our website and your use of any of the services or features we provide is subject to our terms and conditions of which this privacy policy is part. We use top-of-the-range firewall technology to ensure that all transactional information is protected to the highest standard. Transactional information includes any credit or debit card details and your personal contact information, together with any other names and addresses you provide when you place an order for delivery to another address, and your purchasing history.</p>
