privacy page updated

--- a/konjac_sponges/Views/Home/Privacy.cshtml
+++ b/konjac_sponges/Views/Home/Privacy.cshtml
@@ -1,9 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "PRIVACY POLICY";
 }
 <h1>@ViewData["Title"]</h1>
 
-<h2>PRIVACY POLICY</h2>
 
 <hr />
 <p>The Konjac Sponge Company Ltd understands that your privacy is important to you and that you care about how your personal data is used. We respect and value the privacy of everyone who visits this website, www.konjacspongecompany.com (“Our Site”) and will only collect and use personal data in ways that are described here, and in a way that is consistent with our obligations and your rights under the law.</p>
