--- a/konjac_sponges/Views/Sponge/AboutUs.cshtml
+++ b/konjac_sponges/Views/Sponge/AboutUs.cshtml
@@ -10,14 +10,18 @@
     <title>Product Catagolue</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkalami&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h2 style="text-align:center">About konjac sponges</h2>
+        <h2 style="text-align: center; font-family: 'Alkalami', serif; ">About konjac sponges</h2>
         <hr />
         <img src="~/img/sponge.png" style="width:1080px;height:680px;" />
     </header>
     <main>
+        <hr />
         <p> Welcome to the home of the original multi-award winning Konjac Sponge Company. The ultimate Korean Beauty Tool with pure Konjac fibre and nourishing mineral extracts deeply cleanses and refines skin for a radiant complexion.</p>
 
         <hr />
