--- a/konjac_sponges/Views/Sponge/AboutUs.cshtml
+++ b/konjac_sponges/Views/Sponge/AboutUs.cshtml
@@ -18,9 +18,10 @@
     <header>
         <h2 style="text-align: center; font-family: 'Alkalami', serif; ">About konjac sponges</h2>
         <hr />
-        <img src="~/img/sponge.png" style="width:1080px;height:680px;" />
+        <img src="~/img/sponge.jfif" style="width:1080px;height:680px;" />
     </header>
-    <main>
+    <main style="text-align: center; font-family: 'Alkalami', serif; ">
+        
         <hr />
         <p> Welcome to the home of the original multi-award winning Konjac Sponge Company. The ultimate Korean Beauty Tool with pure Konjac fibre and nourishing mineral extracts deeply cleanses and refines skin for a radiant complexion.</p>
 
