--- a/konjac_sponges/Views/Sponge/AboutUs.cshtml
+++ b/konjac_sponges/Views/Sponge/AboutUs.cshtml
@@ -18,7 +18,7 @@
     <header>
         <h2 style="text-align: center; font-family: 'Alkalami', serif; ">About konjac sponges</h2>
         <hr />
-        <img src="~/img/sponge.jfif" style="width:600px; height:500px; " />
+        <img src="~/img/sponges.jfif" style="width:600px; height:500px; " />
     </header>
     <main style="text-align: center; font-family: 'Alkalami', serif; ">
         
