--- a/konjac_sponges/Views/SpongeClasses/Index.cshtml
+++ b/konjac_sponges/Views/SpongeClasses/Index.cshtml
@@ -24,6 +24,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Color)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Shape)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Review)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -41,6 +47,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Color)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Shape)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Review)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
