--- a/konjac_sponges/Views/Shared/_Layout.cshtml
+++ b/konjac_sponges/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Sponge" asp-action="Index">Product Catalogue</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SpongeClasses" asp-action="Index">Product Catalogue</a>
                         </li>
 
                         <li class="nav-item">
