commneted alll necessory codes and Readme updated. program run successfully without any error.

--- a/konjac_sponges/Views/Home/Index.cshtml
+++ b/konjac_sponges/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <hr />
+    <!-- 
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
     <h1 class="display-4">WELCOME TO THE KONJAC SPONGE CO®</h1>
 </div>
