--- a/konjac_sponges/Views/Home/Privacy.cshtml
+++ b/konjac_sponges/Views/Home/Privacy.cshtml
@@ -2,9 +2,13 @@
     ViewData["Title"] = "PRIVACY POLICY";
 }
 <h1>@ViewData["Title"]</h1>
-
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 
 <hr />
+<!--  code to privacy policy  -->
 <p>The Konjac Sponge Company Ltd understands that your privacy is important to you and that you care about how your personal data is used. We respect and value the privacy of everyone who visits this website, www.konjacspongecompany.com (“Our Site”) and will only collect and use personal data in ways that are described here, and in a way that is consistent with our obligations and your rights under the law.</p>
 
 <p>Please read this Privacy Policy carefully and ensure that you understand it. Your acceptance of this Privacy Policy [is deemed to occur upon your first use of Our Site. If you do not accept and agree with this Privacy Policy, you must stop using Our Site immediately.</p>
