--- a/konjac_sponges/Views/Shared/_Layout.cshtml
+++ b/konjac_sponges/Views/Shared/_Layout.cshtml
@@ -1,5 +1,9 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +23,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
+                        <!-- Navigation Bar -->
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
