--- a/konjac_sponges/Views/Sponge/AboutUs.cshtml
+++ b/konjac_sponges/Views/Sponge/AboutUs.cshtml
@@ -5,6 +5,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Catagolue</title>
@@ -16,13 +20,14 @@
 </head>
 <body>
     <header>
+        <!-- Adding fonts and images through refrence of wwwroots file-->
         <h2 style="text-align: center; font-family: 'Alkalami', serif; ">About konjac sponges</h2>
         <hr />
         <img src="~/img/sponges.jfif" style="width:600px; height:500px; " />
     </header>
     <main style="text-align: center; font-family: 'Alkalami', serif; ">
         
-        <hr />
+        <hr /> <!--Information of product below.-->
         <p> Welcome to the home of the original multi-award winning Konjac Sponge Company. The ultimate Korean Beauty Tool with pure Konjac fibre and nourishing mineral extracts deeply cleanses and refines skin for a radiant complexion.</p>
 
         <hr />
