--- a/konjac_sponges/Views/Sponge/Index.cshtml
+++ b/konjac_sponges/Views/Sponge/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Index";
 }
-
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 
 <!DOCTYPE html>
 <html lang="en">
