--- a/konjac_sponges/Views/SpongeClasses/Details.cshtml
+++ b/konjac_sponges/Views/SpongeClasses/Details.cshtml
@@ -3,12 +3,16 @@
 @{
     ViewData["Title"] = "Details";
 }
-
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 <h1>Details</h1>
 
 <div>
     <h4>SpongeClass</h4>
     <hr />
+    <!--All seed data here-->
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
