--- a/konjac_sponges/Views/SpongeClasses/Edit.cshtml
+++ b/konjac_sponges/Views/SpongeClasses/Edit.cshtml
@@ -3,13 +3,17 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 <h1>Edit</h1>
 
 <h4>SpongeClass</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
+        <!--All seed data here-->
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
