--- a/konjac_sponges/Views/SpongeClasses/Create.cshtml
+++ b/konjac_sponges/Views/SpongeClasses/Create.cshtml
@@ -3,7 +3,10 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<!--
+        Name: Het Natvarbhai Patel
+        Student I'd: 0805024
+        -->
 <h1>Create</h1>
 
 <h4>SpongeClass</h4>
@@ -11,6 +14,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <!--All seed data here-->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
